hrf poc class name change

--- a/diagrams/diagrams.html
+++ b/diagrams/diagrams.html
@@ -38,7 +38,7 @@
 <script src='../examples/grammars/hrf/hrf_json.js'></script>
 
 <script>
-    var parserInstanceToDraw = new JsonParser([]);
+    var parserInstanceToDraw = new HrfParser([]);
 
     var diagramsDiv = document.getElementById("diagrams");
 
